--- a/src/webparts/sst/SstWebPart.manifest.json
+++ b/src/webparts/sst/SstWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "f7baf233-b289-48fc-ab4a-dd1b89b95abb",
-  "alias": "BienestarWebPart",
+  "id": "86a46910-9dbe-473a-ad85-c8b59676a5d6",
+  "alias": "SstWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "bienestar" },
-    "description": { "default": "bienestar description" },
+    "title": { "default": "sst" },
+    "description": { "default": "sst description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "bienestar",
+      "description": "sst",
       "url1": "url1",
       "url2": "url2",
       "url3": "url3"
