--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@microsoft/sp-office-ui-fabric-core": "1.18.2",
     "@microsoft/sp-property-pane": "1.18.2",
     "@microsoft/sp-webpart-base": "1.18.2",
+    "@toast-ui/react-calendar": "^2.1.3",
+    "axios": "^1.6.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "tslib": "2.3.1"
+    "tslib": "2.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@microsoft/eslint-config-spfx": "1.18.2",
@@ -38,6 +41,7 @@
     "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "@types/webpack-env": "~1.15.2",
+    "@types/xlsx": "^0.0.36",
     "ajv": "^6.12.5",
     "eslint": "8.7.0",
     "eslint-plugin-react-hooks": "4.3.0",
