--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@microsoft/sp-webpart-base": "1.18.2",
     "@toast-ui/react-calendar": "^2.1.3",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-modal": "^3.16.1",
