--- a/src/webparts/home/HomeWebPart.manifest.json
+++ b/src/webparts/home/HomeWebPart.manifest.json
@@ -25,7 +25,13 @@
       "description": "Home",
       "url1": "url1",
       "url2": "url2",
-      "url3": "url3"
+      "url3": "url3",
+      "url4": "url4",
+      "url5": "url5",
+      "url6": "url6",
+      "url7": "url7",
+      "url8": "url8",
+      "url9": "url9"
     }
   }]
 }
