fix:avances de poput de  pildoras

--- a/src/webparts/home/HomeWebPart.manifest.json
+++ b/src/webparts/home/HomeWebPart.manifest.json
@@ -31,7 +31,8 @@
       "url6": "url6",
       "url7": "url7",
       "url8": "url8",
-      "url9": "url9"
+      "url9": "url9",
+      "url10": "url10"
     }
   }]
 }
